chore: checkpoint before knowledge normalization

--- a/package.json
+++ b/package.json
@@ -2,11 +2,10 @@
   "name": "querytorque",
   "private": true,
   "version": "1.0.0",
-  "description": "QueryTorque - SQL and DAX optimization tools",
+  "description": "QueryTorque - SQL optimization tools",
   "scripts": {
     "dev:sql": "pnpm --filter @querytorque/sql-web dev",
-    "dev:dax": "pnpm --filter @querytorque/dax-web dev",
-    "dev": "pnpm run --parallel dev:sql dev:dax",
+    "dev": "pnpm run dev:sql",
     "build": "pnpm -r build",
     "typecheck": "pnpm -r typecheck",
     "lint": "pnpm -r lint"
