--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "querytorque"
 version = "0.1.0"
-description = "QueryTorque - SQL and DAX query optimization platform"
+description = "QueryTorque - SQL query optimization platform"
 readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [
     {name = "QueryTorque", email = "support@querytorque.com"}
 ]
-keywords = ["sql", "dax", "optimization", "analysis", "querytorque"]
+keywords = ["sql", "optimization", "analysis", "querytorque"]
 
 # Workspace root - no direct dependencies
 # All dependencies are in individual packages
@@ -49,14 +49,12 @@ path = ".venv"
 dependencies = [
     "qt-shared @ {root}/packages/qt-shared",
     "qt-sql @ {root}/packages/qt-sql",
-    "qt-dax @ {root}/packages/qt-dax",
     "qt-calcite @ {root}/packages/calcite",
 ]
 
 [tool.hatch.envs.default.scripts]
 # Development commands
 dev-sql = "uvicorn qt_sql.api.main:app --reload --port 8002"
-dev-dax = "uvicorn qt_dax.api.main:app --reload --port 8003"
 test = "pytest {args}"
 test-cov = "pytest --cov=packages --cov-report=term-missing {args}"
 lint = "ruff check packages"
@@ -100,7 +98,7 @@ ignore = [
 ]
 
 [tool.ruff.lint.isort]
-known-first-party = ["qt_shared", "qt_sql", "qt_dax", "qt_calcite"]
+known-first-party = ["qt_shared", "qt_sql", "qt_calcite"]
 
 [tool.ruff.format]
 quote-style = "double"
