enforce global llm model and remove silent model fallbacks

--- a/packages/qt-sql/qt_sql/benchmarks/duckdb_dsb/config.json
+++ b/packages/qt-sql/qt_sql/benchmarks/duckdb_dsb/config.json
@@ -13,8 +13,7 @@
   "semantic_timeout_ms": 30000,
   "snipe_rounds": 2,
   "tiered_patch_enabled": true,
-  "analyst_model": "deepseek/deepseek-r1",
-  "worker_model": "qwen/qwen3-coder",
+  "enable_reasoning_mode": true,
   "target_speedup": 100.0,
   "generation": {
     "dsqgen_version": "2.11.0",
