--- a/packages/qt-sql/qt_sql/benchmarks/duckdb_tpcds/config.json
+++ b/packages/qt-sql/qt_sql/benchmarks/duckdb_tpcds/config.json
@@ -11,5 +11,6 @@
   "promote_threshold": 1.05,
   "semantic_validation_enabled": true,
   "semantic_timeout_ms": 30000,
-  "snipe_rounds": 2
+  "snipe_rounds": 2,
+  "enable_reasoning_mode": true
 }
