--- a/packages/qt-sql/qt_sql/benchmarks/postgres_dsb_76/config.json
+++ b/packages/qt-sql/qt_sql/benchmarks/postgres_dsb_76/config.json
@@ -1,8 +1,8 @@
 {
   "engine": "postgresql",
   "benchmark": "dsb",
-  "dsn": "postgres://jakc9:jakc9@127.0.0.1:5434/dsb_sf10",
-  "benchmark_dsn": "postgres://jakc9:jakc9@127.0.0.1:5434/dsb_sf10",
+  "dsn": "postgres://jakc9:jakc9@127.0.0.1:5433/dsb_sf10",
+  "benchmark_dsn": "postgres://jakc9:jakc9@127.0.0.1:5433/dsb_sf10",
   "scale_factor": 10,
   "timeout_seconds": 300,
   "validation_method": "race",
@@ -14,8 +14,9 @@
   "semantic_timeout_ms": 30000,
   "snipe_rounds": 2,
   "tiered_patch_enabled": true,
-  "analyst_model": "deepseek/deepseek-r1",
-  "worker_model": "qwen/qwen3-coder",
+  "wide_max_probes": 32,
+  "wide_worker_parallelism": 32,
+  "enable_reasoning_mode": true,
   "target_speedup": 100.0,
   "generation": {
     "dsqgen_version": "2.11.0",
